--- a/index.html
+++ b/index.html
@@ -12,5 +12,17 @@
     <button onclick="startTracking()">Start Tracking</button>
     <button onclick="stopTracking()">Stop Tracking</button>
     <button onclick="downloadData()">Download Data</button>
+
+    <table id="locationTable">
+        <tr>
+          <th>Timestamp</th>
+          <th>Latitude</th>
+          <th>Longitude</th>
+          <th>Altitude</th>
+          <th>Accuracy</th>
+          <th>Heading</th>
+          <th>Speed</th>
+        </tr>
+    </table>
 </body>
 </html>
