--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Location Tracker</title>
     <script src="script.js"></script>
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
+    <link rel="apple-touch-icon" href="./apple-touch-icon.png" sizes="180x180" />
 </head>
 <body>
     <h1>Location Tracker</h1>
