--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="container">
         <div class="info-block">
-            <h2>Sensing Data</h2>
+            <h2>Dashboard</h2>
             <div class="info">
                 <div class="info-item"><span>Time:</span> <span id="timestamp"></span></div>
                 <div class="info-item"><span>Latitude:</span> <span id="latitude"></span></div>
