--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,10 +10,11 @@
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" sizes="180x180">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <button id="trackingButton">Start Tracking</button>
-        
+
         <!-- トラッキング開始時刻を表示するスペース -->
         <div id="trackingStartTime" class="tracking-time"></div>
         <div id="trackingEndTime" class="tracking-time"></div>
@@ -23,15 +25,28 @@
             <h2>Dashboard</h2>
             <div class="info">
                 <div class="info-item"><span>Time:</span> <span id="timestamp"></span></div>
-                <div class="info-item"><span>Latitude:</span> <span id="latitude"></span></div>
-                <div class="info-item"><span>Longitude:</span> <span id="longitude"></span></div>
-                <div class="info-item"><span>Altitude:</span> <span id="altitude"></span></div>
-                <div class="info-item"><span>Accuracy:</span> <span id="accuracy"></span></div>
-                <div class="info-item"><span>Altitude Accuracy:</span> <span id="altitudeAccuracy"></span></div>
+
+                <!-- 緯度・経度・精度のグループ -->
+                <div class="group">
+                    <div class="info-item"><span>Latitude:</span> <span id="latitude"></span></div>
+                    <div class="info-item"><span>Longitude:</span> <span id="longitude"></span></div>
+                    <div class="info-item"><span>Accuracy:</span> <span id="accuracy"></span></div>
+                </div>
+
+                <!-- 高度・高度精度のグループ -->
+                <div class="group">
+                    <div class="info-item"><span>Altitude:</span> <span id="altitude"></span></div>
+                    <div class="info-item"><span>Altitude Accuracy:</span> <span id="altitudeAccuracy"></span></div>
+                </div>
+
+                <!-- 方位 -->
                 <div class="info-item"><span>Heading:</span> <span id="heading"></span></div>
+
+                <!-- 速度 -->
                 <div class="info-item"><span>Speed:</span> <span id="speed"></span></div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
