--- a/index.html
+++ b/index.html
@@ -36,14 +36,16 @@
                 <!-- 高度・高度精度のグループ -->
                 <div class="group">
                     <div class="info-item"><span>Altitude:</span> <span id="altitude"></span></div>
-                    <div class="info-item"><span>Altitude Accuracy:</span> <span id="altitudeAccuracy"></span></div>
+                    <div class="info-item"><span>Accuracy:</span> <span id="altitudeAccuracy"></span></div>
                 </div>
 
-                <!-- 方位 -->
-                <div class="info-item"><span>Heading:</span> <span id="heading"></span></div>
+                <div class="group">
+                    <!-- 方位 -->
+                    <div class="info-item"><span>Heading:</span> <span id="heading"></span></div>
 
-                <!-- 速度 -->
-                <div class="info-item"><span>Speed:</span> <span id="speed"></span></div>
+                    <!-- 速度 -->
+                    <div class="info-item"><span>Speed:</span> <span id="speed"></span></div>
+                </div>
             </div>
         </div>
     </div>
