--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Location Tracker</title>
     <script src="script.js"></script>
-    <link rel="icon" href="./favicon.ico">
-    <link rel="apple-touch-icon" href="./apple-touch-icon.png" sizes="180x180">
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/favicon.ico" />
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png" sizes="180x180" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="manifest" href="manifest.json" />
 </head>
 
 <body>
