--- a/index.html
+++ b/index.html
@@ -27,26 +27,28 @@
             <div class="info">
                 <div class="info-item"><span>Time:</span> <span id="timestamp"></span></div>
 
-                <!-- 緯度・経度・精度のグループ -->
+                <!-- 緯度・経度のグループ -->
                 <div class="group">
                     <div class="info-item"><span>Latitude:</span> <span id="latitude"></span></div>
                     <div class="info-item"><span>Longitude:</span> <span id="longitude"></span></div>
                     <div class="info-item"><span>Accuracy:</span> <span id="accuracy"></span></div>
                 </div>
 
-                <!-- 高度・高度精度のグループ -->
+                <!-- 高度のグループ -->
                 <div class="group">
                     <div class="info-item"><span>Altitude:</span> <span id="altitude"></span></div>
                     <div class="info-item"><span>Accuracy:</span> <span id="altitudeAccuracy"></span></div>
                 </div>
 
+                <!-- 方位・速度のグループ -->
                 <div class="group">
-                    <!-- 方位 -->
                     <div class="info-item"><span>Heading:</span> <span id="heading"></span></div>
-
-                    <!-- 速度 -->
                     <div class="info-item"><span>Speed:</span> <span id="speed"></span></div>
                 </div>
+            </div>
+
+            <div class="info">
+                <div class="info-item"><span>Estimated speed:</span> <span id="estimated_speed"></span></div>
             </div>
         </div>
     </div>
