--- a/index.html
+++ b/index.html
@@ -43,19 +43,12 @@
                 <!-- 方位・速度のグループ -->
                 <div class="group">
                     <div class="info-item"><span>Heading:</span> <span id="heading"></span></div>
-                    <div class="info-item"><span>Speed:</span> <span id="speed"></span>
-                    </div>
+                    <div class="info-item"><span>Speed:</span> <span id="speed"></span></div>
                 </div>
             </div>
 
             <div class="info">
-                <div class="info-item">
-                    <span>Estimated speed:</span> <span id="estimated_speed"></span>
-                    <select id="speedUnit" name="speedUnit">
-                        <option value="kph">kph</option>
-                        <option value="mph">mph</option>
-                    </select>
-                </div>
+                <div class="info-item"><span>Estimated speed:</span> <span id="estimated_speed"></span></div>
             </div>
         </div>
     </div>
