--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <title>Location Tracker</title>
     <script src="script.js"></script>
     <link rel="icon" href="img/favicon.ico" />
@@ -24,6 +25,7 @@
                     <div class="info-item"><span>Latitude:</span> <span id="latitude"></span></div>
                     <div class="info-item"><span>Longitude:</span> <span id="longitude"></span></div>
                     <div class="info-item"><span>Accuracy:</span> <span id="accuracy"></span></div>
+                    <div class="info-item"><a id="map" href="">Map</a></div>
                 </div>
 
                 <!-- 高度のグループ -->
